2001-04-12  Radek Doulik  <rodo@ximian.com>

	* htmlgdkpainter.c (html_gdk_painter_unrealize): check if painter
	is already realized

2001-04-11  Radek Doulik  <rodo@ximian.com>

	* htmlplainpainter.c (alloc_fixed_font): if face == NULL pass NULL
	- NULL means that fixed font is requested

	* gtkhtml.c (command): ops, removed unwanted calls to
	update_styles

	* htmlengine-edit-fontstyle.c (html_engine_set_font_style):
	changed order back to AND, OR
	(get_color_from_selection): use point for movement thru selection
	(get_color_from_selection): don't get color from end of objects
	(get_font_style_from_selection): likewise

	* gtkhtml.c (button_press_event): fixed Bug 2166:
	With Evolution, start composing a new message; type out a few lines. Click
	to insert the cursor somewhere, and then click backwards in the text to
	select a range. Now click outside of the selection. The GtkHTML component
	should go away, leaving a grey box.

2001-04-07  Dan Winship  <danw@ximian.com>

	* htmlprinter.c (DARK, LIGHT):
	* htmlgdkpainter.c (DARK, LIGHT):
	* htmlengine-edit-rule.c (SET, SETO):
	* gtkhtml-properties.c (GET, SET, GET, GETS, COPYS): Remove
	inappropriate uses of ## in macro definitions.

	* htmltextslave.h: 
	* htmltable.h: Remove (unused) non-extern declarations of
	html_table_class and html_text_slave_class.

	* htmlclue.c: Make parent_class static

2001-04-03  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (check_prev): check faces

	* htmlfontmanager.c (strip_white_space): new helper function
	(alloc_new_font): allow white spaces in face list
	(get_name_from_face): use 13th and 14th attribute instead of 12th
	and 13th

2001-04-02  Larry Ewing  <lewing@ximian.com>

	* htmlclueflow.c (write_pre_tags): only write a \n for PRE flows,
	rather than a <br>\n.

2001-03-30  Larry Ewing  <lewing@ximian.com>

	* htmlobject.c (copy): copy pref_width.

	* gtkhtml.c (selection_received): use unicode_strlen on the
	selection data lenght.  Why are we not using byte ranges for